storage/longhorn/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://storage.xdew.ch/auth/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://storage.xdew.ch/auth/start?rd=https://$host$request_uri"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: xdew-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - storage.xdew.ch
      secretName: longhorn-ui-tls
  rules:
    - host: storage.xdew.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
